tests/errors/first_stage/.string/extra_chars/extra_chars.as
; extra characters after string in .string instruction
myStr: .string "Hello, OpenU!" openU